@@ -291,7 +291,6 @@ tasks {
     }
 
     buildSearchableOptions {
-      jvmArgs("-Djava.security.manager=com.intellij.platform.core.nio.fs.CoreBootstrapSecurityManager")
       enabled = buildConfiguration == "Release"
     }
   }
